Fixed title collapsing issue

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ nav li a:hover:after {
 
 .title-text {
   color: #fff;
-  font-size: calc(0.7em + 2.5vw);
+  font-size: calc(0.5em + 2.5vw);
   margin-left: 10px;
 }
 
